--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -24,7 +24,7 @@
   {%- if site.dribbble_url -%}
   <li><a href="{{- site.dribbble_url -}}" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
   {%- endif -%}
-  {%- if site.email -%}
+<!--   {%- if site.email -%}
   <li><a href="mailto:{{- site.email -}}" class="icon fa-envelope"><span class="label">Email</span></a></li>
-  {%- endif -%}
+  {%- endif -%} -->
 </ul>
