--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,9 @@
   <title>{{- _page_title -}}</title>
   <meta name="description" content="{{- _page_description -}}" />
   <meta name="author" content="{{- site.author -}}" />
-  
+  {% include scripts.html %}  
+  {% include scripts-gallery.html %}  
+
   <!-- Open Graph -->
   <meta property="og:title" content="{{- _page_title -}}" />
   <meta property="og:type" content="website" />
@@ -31,18 +33,6 @@
   <!-- Styles -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--[if lte IE 8]><script src="{{- 'assets/js/ie/html5shiv.js' | relative_url -}}" defer></script><![endif]-->
   <link rel="stylesheet" href="{{- 'assets/css/main.css' | relative_url -}}" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="{{- 'assets/css/ie8.css' | relative_url -}}" /><![endif]-->
-  <!--[if lte IE 9]><link rel="stylesheet" href="{{- 'assets/css/ie9.css' | relative_url -}}" /><![endif]-->
-
-  <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
-  <script src="{{- 'assets/js/jquery.scrolly.min.js' | relative_url -}}" defer></script>
-  <script src="{{- 'assets/js/jquery.scrollzer.min.js' | relative_url -}}" defer></script>
-  <script src="{{- 'assets/js/skel.min.js' | relative_url -}}" defer></script>
-  <script src="{{- 'assets/js/util.js' | relative_url -}}" defer></script>
-  <!--[if lte IE 8]><script src="{{- 'assets/js/ie/respond.min.js' | relative_url -}}" defer></script><![endif]-->
-  <script src="{{- 'assets/js/main.js' | relative_url -}}" defer></script>
-
+ 
 </head>
