--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+support: [jquery]
 ---
 {%- assign _sections = site.sections | sort: 'order' -%}
 {%- include header.html scrolly_nav=_sections -%}
