--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -267,6 +267,12 @@
 			width: 100%;
 			margin: 0 0 2em 0;
 		}
+		&.featured1 {
+			display: block;
+			width: 30%;
+			 margin-left: auto;
+		    margin-right: auto ;
+		}
 
 		&.left {
 			float: left;
