--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -61,6 +61,7 @@
 /* Basic */
 
 	body {
+		-webkit-overflow-scrolling: touch;
 		background: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 19pt;
