--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -4,3 +4,4 @@
 Самовывоз. Доставка оговариваеться отдельно.</p>
 <p>В стоимость входит только торт с покрытием из крема. Также в стоимость входит коробка. Декор оплачивается отдельно. Это может быть ягоды и фрукты, живые цветы, меренга. Для детских тортиков можна также игрушки, которые будут предварительно вымыты и высушены.</p>
 <p>Также может быть в качестве декора пряники и топперы. Заказ в таком случае лучше делать за 1 месяц т.к. прянички и топперы я буду заказывать для Вашего тортика отдельно.</p>
+Возникли вопросы - 099-560-39-72
