--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -1,7 +1,7 @@
 <hr>
 <h3>Условия заказа:</h3>
-<p>Заказ лучше делать за 5-7 дней. Заказ принят если внесена 50% предварительная оплата.
-Самовывоз. Доставка оговариваеться отдельно.</p>
-<p>В стоимость входит только торт с покрытием из крема. Также в стоимость входит коробка. Декор оплачивается отдельно. Это может быть ягоды и фрукты, живые цветы, меренга. Для детских тортиков можна также игрушки, которые будут предварительно вымыты и высушены.</p>
-<p>Также может быть в качестве декора пряники и топперы. Заказ в таком случае лучше делать за 1 месяц т.к. прянички и топперы я буду заказывать для Вашего тортика отдельно.</p>
-Возникли вопросы - 099-560-39-72
+<p>Делайте заказ заранее (5-7 дней) и с предоплатой в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.</p>
+<p>В стоимость на сайте входит только торт с кремовым покрытием и упаковка.</p>
+<p>Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. </p>
+<p>Для украшения детских тортиков возможны игрушки. </p>
+<p>Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.</p>
