--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -1,7 +1,7 @@
 <hr>
 <h3>Условия заказа:</h3>
-<p>Делайте заказ заранее (5-7 дней) и с предоплатой в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.</p>
-<p>В стоимость на сайте входит только торт с кремовым покрытием и упаковка.</p>
-<p>Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. </p>
-<p>Для украшения детских тортиков возможны игрушки. </p>
-<p>Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.</p>
+Делайте заказ заранее (5-7 дней) и с предоплатой в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.
+В стоимость на сайте входит только торт с кремовым покрытием и упаковка.
+Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. 
+Для украшения детских тортиков возможны игрушки. 
+Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.
