several changes in text

--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -1,7 +1,8 @@
 <hr>
 <h3>Условия заказа:</h3>
+Минимальный заказ 2 кг.
 Делайте заказ заранее (5-7 дней) и с предоплатой в 50%. Предпочитаю самовывоз. Доставку оговорим отдельно.
 В стоимость на сайте входит только торт с кремовым покрытием и упаковка.
 Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. 
-Для украшения детских тортиков возможны игрушки. 
+Для украшения детских тортиков возможны игрушки и вафельные картинки.
 Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.
