--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  {%- if site.google_analytics and jekyll.environment == 'production' -%}
+  {%- if site.google_analytics -%}
     {%- include google_analytics.html -%}
   {%- endif -%}
   
