--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
   <!-- Copyright -->
   <ul class="copyright">
     {% if site.title or site.author %}
-      <li>&copy; {{- site.title | default: site.author -}}. All rights reserved.</li>
+      <li>&copy; {{- site.title | default: site.author -}}. Торты на заказ в г. Бровары.</li>
     {% endif %}
   </ul>
   
 </div>
+<!-- <p id="text" style="color:red">Торты на заказ в г.Бровары.</p> -->
