--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <!-- Copyright -->
   <ul class="copyright">
     {% if site.title or site.author %}
-      <li>&copy; {{- site.title | default: site.author -}}. Торты на заказ в г. Бровары.</li>
+      <li>&copy; {{- site.title | default: site.author -}}. {{- site.text }}.</li>
     {% endif %}
   </ul>
   
