--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
 
   <title>{{- _page_title -}}</title>
   <meta name="description" content="{{- _page_description -}}" />
+  <meta name="keywords" content="{{- site.keywords -}}" />
   <meta name="author" content="{{- site.author -}}" />
   {% include scripts.html %}  
   {% include scripts-gallery.html %}  
