--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,5 +35,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="{{- 'assets/css/main.css' | relative_url -}}" />
- 
+ <link rel="apple-touch-icon" sizes="114x114" href="{{ "/assets/img/favicon/apple-touch-icon-114x114.png" | prepend: site.baseurl }}">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#d25469">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#d25469">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#d25469">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 </head>
