--- a/_includes/gallery-new.html
+++ b/_includes/gallery-new.html
@@ -6,7 +6,7 @@
     data-responsive="{% for size in picture.sizes %} {{ site.url}}{{ site.baseurl }}/assets/images/{{ size }} {{ size | split: '-' | last | split: '.' | first | split: 'x' | first | strip }}{% unless forloop.last %},{% endunless %}{% endfor %}" class="image">
    {% if picture.thumbnail == empty %}
    <img  src="">
-   {% elsif picture.thumbnail == 'cut.jpg' %} 
+   {% elsif picture.thumbnail == 'top_new.jpg' %} 
     <img  src="{{ site.url }}{{ site.baseurl }}/assets/images/{{picture.thumbnail}}"></a>
    {% endif %}
    </a>
