--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -5,4 +5,4 @@
 В стоимость на сайте входит только торт с кремовым покрытием и упаковка.
 Декор оплачиваеться отдельно. Это могут  быть ягоды и фрукты, живые цветы, меренга. 
 Для украшения детских тортиков возможны игрушки и вафельные картинки.
-Если вы хотите украсить торт пряниками или топперами, сделайте заказ за месяц до торжества.
+Если вы хотите украсить торт пряниками или топперами - сделайте заказ за месяц до торжества.
